--- a/cli/docker-compose.yml
+++ b/cli/docker-compose.yml
@@ -2,12 +2,13 @@ services:
   ente:
     image: ente:latest
     command: /bin/sh
+    network_mode: host
     volumes:
       # This is mandatory to mount the local directory to the container at /cli-data
       # CLI will use this directory to store the data required for syncing export
-      - /path/to/local/directory/cli/:/cli-data:rw
+      - ./data/cli/:/cli-data:rw
       # You can add additional volumes to mount the export directory to the container
       # While adding account for export, you can use /data as the export directory.
-      - /path/to/local/directory/export:/data:rw
+      - ./data/export:/data:rw
     stdin_open: true
     tty: true
