--- a/server/configurations/local.yaml
+++ b/server/configurations/local.yaml
@@ -118,13 +118,13 @@ s3:
     b2-eu-cen:
         key: test
         secret: testtest
-        endpoint: localhost:3200
+        endpoint: https://upload.ente.jospace.de
         region: eu-central-2 
         bucket: b2-eu-cen
     wasabi-eu-central-2-v3:
         key: test
         secret: testtest
-        endpoint: localhost:3200
+        endpoint: https://upload.ente.jospace.de
         region: eu-central-2
         bucket: wasabi-eu-central-2-v3
         # If enabled, this causes us to opt the object out of the compliance
@@ -135,13 +135,13 @@ s3:
     scw-eu-fr-v3:
         key: test
         secret: testtest
-        endpoint: localhost:3200
+        endpoint: https://upload.ente.jospace.de
         region: eu-central-2
         bucket: scw-eu-fr-v3
     wasabi-eu-central-2-derived:
         key: test
         secret: testtest
-        endpoint: localhost:3200
+        endpoint: https://upload.ente.jospace.de
         region: eu-central-2
         bucket: wasabi-eu-central-2-derived
     # Derived storage bucket is used for storing derived data like embeddings, preview etc.
