--- a/web/apps/photos/.env
+++ b/web/apps/photos/.env
@@ -67,7 +67,7 @@
 # Enhancement: Consider splitting this into a separate app/ in this repository.
 # That can also reduce bundle sizes and make it load faster.
 #
-# NEXT_PUBLIC_ENTE_ALBUMS_ENDPOINT = http://localhost:3002
+NEXT_PUBLIC_ENTE_ALBUMS_ENDPOINT = albums.ente.jospace.de
 
 # The URL of the family plans web app
 #
