--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,9 @@ volumes:
   custom-logs:
   postgres-data:
   minio-data:
+    type: none
+    o: bind
+    device: /mnt/IronWolf_4TB/minio-data
 
 services:
   museum:
